# FileCoder

./: .gitignore  CMakeLists.txt  Initialization.h  README.md  main.cpp
Coder/: Coder.cpp  Coder.h  ICoder.h  RandomChar.cpp
CommandHolder/: CommandHolder.cpp  CommandHolder.h  ICommandHolder.cpp  ICommandHolder.h
Commands/: Command.cpp  Command.h  CommandDecode.cpp  CommandEncode.cpp  CommandEncode.h  CommandVersion.h  ICommand.h
DataTypes/: CommandData.h  CommandFullName.h
Executor/: Executor.cpp  Executor.h
Logger/: ILogger.h  Logger.cpp  Logger.h
Parser/: IParser.h  Parser.cpp  Parser.h
Source/: CMakeLists.txt  Initialization.h  defination.h  main.cpp
Source/Coder/: Coder.cpp  Coder.h  ICoder.h  IRandomChar.h  RandomChar.h
Source/CommandHolder/: CommandHolder.h  ICommandHolder.h
Source/Commands/: Command.h  CommandDecode.h  CommandEncode.h  CommandVersion.cpp
Source/Executor/: IExecutor.h
Source/Logger/: ILogger.h  Logger.cpp  Logger.h
Source/Parser/: Parser.h
Tests/: ClearFiles.py  DecodeArgsTest.py  DecodeTestSimply.py  EncodeArgsTest.py  EncodeTestSimple.py  RunTests.py  VersionTest.py  printResult.py  settings.py
